--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <h2 class="text-5xl entry"> 11. Septembre 2020, 10:30 </h2>
       <h2 class="text-5xl entry"> Vigneux-sur-Seine, France </h2>
           <button  class="text-5xl entry mt-8 bg-gray-500 hover:bg-gray-600 text-white font-bold py-2 px-2 rounded" type="button">
-            Confirmez!
+            Programme
           </button>
     </div>
   </body>
