some style fixing

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Tailwind Starter Template - Profile Card : Tailwind Toolbox</title>
     <link rel="manifest" href="./site.webmanifest" />
     <meta name="theme-color" content="#3b7977" />
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap" rel="stylesheet">
@@ -23,11 +22,11 @@
       <h1 class="headline font-bold text-6xl antialiased">Jeanne & Eric</h1>
       <h2 class="text-5xl entry"> 11. Septembre 2020, 10:30 </h2>
       <h2 class="text-5xl entry"> Vigneux-sur-Seine, France </h2>
-          <button  onclick="showPage()" class="text-5xl entry mt-8 bg-gray-500 hover:bg-gray-600 text-white font-bold py-2 px-2 rounded" type="button">
+          <button class="text-5xl entry mt-8 bg-gray-500 hover:bg-gray-600 text-white font-bold py-2 px-2 rounded" type="button">
             Programme
           </button>
     </div>
-    <div id="countdown" class="text-xxl text-6xl entry entry-color absolute bottom-0 right-0 mr-8"></div>
+    <div id="countdown" class="countdown location text-3xl entry entry-color absolute bottom-0 right-0 ml-0 mt-0 mr-8"></div>
     </div>
   </body>
 </html>
