--- a/index.html
+++ b/index.html
@@ -1,33 +1,21 @@
 <html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="manifest" href="./site.webmanifest" />
-    <meta name="theme-color" content="#3b7977" />
+<head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+<!--    <link rel="manifest" href="./site.webmanifest"/>-->
+    <meta name="theme-color" content="#3b7977"/>
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
-    <link rel="stylesheet" href="https://unpkg.com/tailwindcss/dist/tailwind.min.css" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="https://unpkg.com/tailwindcss/dist/tailwind.min.css"/>
+    <link rel="stylesheet" href="./style.css"/>
     <script src="./script.js" charset="utf-8"></script>
     <title>
-      Jeanne and Eric wedding
+        Jeanne and Eric wedding
     </title>
-  </head>
-
-  <body>
-    <div class="flex">
-    <div class="entry ml-8 entry-color text-center">
-      <h1 class="headline font-bold text-6xl antialiased">Jeanne & Eric</h1>
-      <h2 class="text-5xl entry"> 11. Septembre 2020, 10:30 </h2>
-      <h2 class="text-5xl entry"> Vigneux-sur-Seine, France </h2>
-          <button class="text-5xl entry mt-8 bg-gray-500 hover:bg-gray-600 text-white font-bold py-2 px-2 rounded" type="button">
-            Programme
-          </button>
-    </div>
-    <div id="countdown" class="countdown location text-3xl entry entry-color absolute bottom-0 right-0 ml-0 mt-0 mr-8"></div>
-    </div>
-  </body>
+</head>
+<body id="app">
+</body>
 </html>
 
