--- a/index.html
+++ b/index.html
@@ -3,19 +3,24 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-<!--    <link rel="manifest" href="./site.webmanifest"/>-->
+    <!--    <link rel="manifest" href="./site.webmanifest"/>-->
     <meta name="theme-color" content="#3b7977"/>
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
     <link rel="stylesheet" href="https://unpkg.com/tailwindcss/dist/tailwind.min.css"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css"/>
-    <script src="./script.js" charset="utf-8"></script>
     <title>
         Jeanne and Eric wedding
     </title>
 </head>
-<body id="app">
+<body class="overflow-hidden">
+<div class="parent" id="app">
+
+</div>
 </body>
+
+<script src="./script.js" charset="utf-8"></script>
 </html>
 
